--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark flex-md column flex-row align-items-center py-2 text-center sticky-top">
             <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-md-column flex-row align-items-center py-2 text-center sticky-top" id="sidebar">
               <div class="text-center p-3">
-                <img src="https://raw.githubusercontent.com/antoniojosegteixeira/burger-place-website/b58273ab2db1b8cf6eb55853506684e5c0f44ed6/images/logo-burger.svg" alt="Burger logo" class="img-fluid mt-4 p-1 d-none d-md-block"/>
+                <img src="https://raw.githubusercontent.com/antoniojosegteixeira/burger-place-website/b58273ab2db1b8cf6eb55853506684e5c0f44ed6" alt="Burger logo" class="img-fluid mt-4 p-1 d-none d-md-block"/>
               </div>
               <button type="button" class="navbar-toggler border-0 order-1" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expands="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
