--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="https://antoniojosegteixeira.github.io/burger-place-website/">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Burger Bistro</title>
 
@@ -29,7 +30,7 @@
           <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark flex-md column flex-row align-items-center py-2 text-center sticky-top">
             <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-md-column flex-row align-items-center py-2 text-center sticky-top" id="sidebar">
               <div class="text-center p-3">
-                <img src="https://raw.githubusercontent.com/antoniojosegteixeira/burger-place-website/b58273ab2db1b8cf6eb55853506684e5c0f44ed6" alt="Burger logo" class="img-fluid mt-4 p-1 d-none d-md-block"/>
+                <img src="/images/logo-burger.svg" alt="Burger logo" class="img-fluid mt-4 p-1 d-none d-md-block"/>
               </div>
               <button type="button" class="navbar-toggler border-0 order-1" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expands="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
