--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="https://antoniojosegteixeira.github.io/burger-place-website/">
+    <base href="https://raw.githubusercontent.com/antoniojosegteixeira/burger-place-website/main">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Burger Bistro</title>
 
