Menu section added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <main>
       <div class="container-fluid">
         <div class="row min-vh-100 flex-column flex-md-row">
-          <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark flex-md column flex-row align-items-center py-2 text-center sticky-top">
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-md-column flex-row align-items-center py-2 text-center sticky-top" id="sidebar">
+          <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark flex-md column flex-row align-items-center text-center sticky-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-md-column flex-row align-items-center text-center sticky-top" id="sidebar">
               <div class="text-center p-3">
                 <img src="assets/logo-burger.svg" alt="Burger logo" class="img-fluid mt-4 p-1 d-none d-md-block"/>
               </div>
@@ -37,16 +37,16 @@
               <div class="collapse navbar-collapse order-last" id="nav">
                 <ul class="navbar-nav flex-column w-100 justify-content-center">
                   <li class="nav-item">
-                    <a href="" class="nav-link active">Menu</a>
+                    <a href="#menu" class="nav-link active">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a href="" class="nav-link active">Sobre</a>
+                    <a href="#" class="nav-link active">Sobre</a>
                   </li>
                   <li class="nav-item">
-                    <a href="" class="nav-link active">Galeria</a>
+                    <a href="#" class="nav-link active">Galeria</a>
                   </li>
                   <li class="nav-item">
-                    <a href="" class="nav-link active">Contato</a>
+                    <a href="#" class="nav-link active">Contato</a>
                   </li>
                 </ul>                
               </div>
@@ -75,13 +75,88 @@
 
           <!-- POSTS -->
           <main class="col px-0 flex-grow-1">
-            <article class="d-flex flex-column vh-100 text-white position-relative overflow-hidden cheaderimage1">
+            <!-- HERO -->
+            <article class="row d-flex flex-column vh-100 mx-0 text-white position-relative overflow-hidden cheaderimage1">
               <div class="p-0 m-0 d-flex flex-column position-absolute blind text-center justify-content-center">
                 <h1 class="display-1">BEM VINDO</h1>
               </div>
             </article>
-          </main>
+            <!-- HERO -->
 
+            <!-- MENU -->
+            <article class="row d-flex d-md-flex-column position-relative mx-0" id="menu">
+              <div class="col-0 border min-vh-100 p-5 border-primary">
+                <h1>MENU</h1>
+                <div class="container-fluid px-1 px-md-2">
+                  <h5 class="mt-4">BURGERS</h5>
+                  <span class="line"></span>
+                  <div class="row row-menu flex-row">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Barbecue</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Duplo</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Jalapeño</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Quatro queijos</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Costela suína</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Picanha</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Barbecue</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Duplo</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Jalapeño</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Quatro queijos</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Costela suína</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+  
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                      <h6 class="text-uppercase">Picanha</h6>
+                      <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+            <!-- MENU -->
+          
+          </main>
           <!-- POSTS -->
         </div>
       </div>
