--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="#menu" class="nav-link active">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link active">Sobre</a>
+                    <a href="#about" class="nav-link active">Sobre</a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link active">Galeria</a>
@@ -85,7 +85,7 @@
 
             <!-- MENU -->
             <article class="row d-flex d-md-flex-column position-relative mx-0" id="menu">
-              <div class="col-0 border min-vh-100 p-5 border-primary">
+              <div class="col-0 border p-5">
                 <h1>MENU</h1>
                 <div class="container-fluid px-1 px-md-2">
                   <h5 class="mt-4">BURGERS</h5>
@@ -155,7 +155,67 @@
               </div>
             </article>
             <!-- MENU -->
-          
+            
+            <!--ABOUT US-->
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+              <div class="col-10 col-md-10 col-lg-5">
+                <img src="assets/about-image.jpg" class="img-fluid" />
+              </div>
+              <div class="col-11 col-lg-6 border p-4 d-flex flex-column text-center">
+                <h1 class="text-uppercase mt-2 mt-md-0 text-center">Sobre</h1>
+                <div class="text-container d-flex justify-content-center">
+                  <p class="col-md-11 text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                  </p>
+                </div>
+              </div>
+            </article>
+            <!--ABOUT US-->
+
+            <!--GALLERY-->
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+              <div class="col-11 min-vh-100">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="assets/slider1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/slider2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/slider3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="assets/slider4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>            
+            </article>
+            <!--GALLERY-->
+
+
           </main>
           <!-- POSTS -->
         </div>
