--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <!-- MENU -->
             <article class="row d-flex d-md-flex-column position-relative mx-0" id="menu">
-              <div class="col-0 border p-5">
+              <div class="col-0 p-5">
                 <h1>MENU</h1>
                 <div class="container-fluid px-1 px-md-2">
                   <h5 class="mt-4">BURGERS</h5>
@@ -161,7 +161,7 @@
               <div class="col-10 col-md-10 col-lg-5">
                 <img src="assets/about-image.jpg" class="img-fluid" />
               </div>
-              <div class="col-11 col-lg-6 border p-4 d-flex flex-column text-center">
+              <div class="col-11 col-lg-6 p-4 d-flex flex-column text-center">
                 <h1 class="text-uppercase mt-2 mt-md-0 text-center">Sobre</h1>
                 <div class="text-container d-flex justify-content-center">
                   <p class="col-md-11 text-center">
@@ -187,6 +187,7 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
