Contact page added

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
             <!--GALLERY-->
             <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
-              <div class="col-11 min-vh-100">
+              <div class="col-11">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -215,6 +215,77 @@
               </div>            
             </article>
             <!--GALLERY-->
+
+            <!--CONTACT US-->
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+              <div class="col-11 col-lg-6 p-4 d-flex flex-column">
+                <h1 class="text-uppercase mt-2 mt-md-0">Contato</h1>
+                <div class="blank-space"></div>
+                <h5 class="mt-3">Localização</h5>
+                <div class="text-container d-flex justify-content-center">
+                  <p class="col-0">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                  </p>
+                </div>
+                <div class="blank-space"></div>
+                <span class="line"></span>
+                <div class="blank-space"></div>
+                <h5 class="mt-3">Contato</h5>
+                <div class="text-container d-flex justify-content-center">
+                  <p class="col-0">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                  </p>
+                </div>
+                <div class="blank-space"></div>
+                <span class="line"></span>
+                <div class="blank-space"></div>
+                <h5 class="mt-3">Horário de Funcionamento</h5>
+                <div class="text-container d-flex ">
+                  <span class="col-0">Segunda a Sábado: 15:00h - 23:00h</span>
+                </div>
+              </div>
+              
+              <div class="col-10 col-md-10 col-lg-5">
+                <img src="assets/about-image.jpg" class="img-fluid" />
+              </div>
+            </article>
+            <!--CONTACT US-->
+
+            <!-- FOOTER -->
+            <footer class="row d-flex position-relative mx-0 bg-light-gray py-2">
+              <div class="container-fluid text-center d-flex flex-row justify-content-end">
+                <a href="https://www.facebook.com/" class="nav-link hover-orange pb-1">
+                  <i class="fab fa-facebook-square fa-lg"></i>
+                </a>
+                <a href="https://www.instagram.com/" class="nav-link hover-orange pb-1">
+                  <i class="fab fa-instagram fa-lg"></i>
+                </a>
+                <a href="https://www.tiktok.com/" class="nav-link hover-orange pb-1">
+                  <i class="fab fa-tiktok fa-lg"></i>
+                </a>
+              </div>
+              <div class="container-fluid text-center d-flex flex-row align-items-center justify-content-end px-4">
+                <a href="https://www.facebook.com/" class="nav-link hover-orange px-1">
+                  <i class="fab fa-whatsapp fa-lg"></i>
+                </a>
+                <span class="tw-bold mx-1">(65)9000000</span>
+              </div>
+            </footer>
+            <!-- FOOTER -->
 
 
           </main>
