--- a/index.html
+++ b/index.html
@@ -37,40 +37,20 @@
               <div class="collapse navbar-collapse order-last" id="nav">
                 <ul class="navbar-nav flex-column w-100 justify-content-center">
                   <li class="nav-item">
-                    <a href="#menu" class="nav-link active">Menu</a>
+                    <a href="#menu" class="nav-link">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#about" class="nav-link active">Sobre</a>
+                    <a href="#about" class="nav-link">Sobre</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link active">Galeria</a>
+                    <a href="#gallery" class="nav-link">Galeria</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link active">Contato</a>
+                    <a href="#infos" class="nav-link">Informações</a>
                   </li>
                 </ul>                
               </div>
             </nav>
-
-            <!-- SOCIAL -->
-            <!--
-            <ul class="nav justify-content-center">
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white">
-                  <i class="fab fa-twitter-square fa-lg"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white">
-                  <i class="fab fa-instagram-square fa-lg"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white">
-                  <i class="fab fa-facebook-square fa-lg"></i>
-                </a>
-              </li>
-            </ul> -->
           </aside>
 
           <!-- POSTS -->
@@ -180,7 +160,7 @@
             <!--ABOUT US-->
 
             <!--GALLERY-->
-            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="gallery">
               <div class="col-11">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-indicators">
@@ -217,38 +197,30 @@
             <!--GALLERY-->
 
             <!--CONTACT US-->
-            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="infos">
               <div class="col-11 col-lg-6 p-4 d-flex flex-column">
-                <h1 class="text-uppercase mt-2 mt-md-0">Contato</h1>
+                <h1 class="text-uppercase mt-2 mt-md-0">Informações</h1>
                 <div class="blank-space"></div>
                 <h5 class="mt-3">Localização</h5>
-                <div class="text-container d-flex justify-content-center">
-                  <p class="col-0">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Id odit dolor, voluptatum voluptates vero veritatis tempora
-                    nesciunt dolore iusto magnam sapiente deleniti quas vel
-                    nostrum assumenda quidem quae ipsam cupiditate.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Id odit dolor, voluptatum voluptates vero veritatis tempora
-                    nesciunt dolore iusto magnam sapiente deleniti quas vel
-                    nostrum assumenda quidem quae ipsam cupiditate.
-                  </p>
+                <div class="text-container d-flex flex-column justify-content-center">
+                  <span class="col-0">
+                    Rua Lorem Ipsum Dolor Sit, 300
+                  </span>
+                  <span>
+                    Voluptates, Cuiabá-MT
+                  </span>
                 </div>
                 <div class="blank-space"></div>
                 <span class="line"></span>
                 <div class="blank-space"></div>
                 <h5 class="mt-3">Contato</h5>
-                <div class="text-container d-flex justify-content-center">
-                  <p class="col-0">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Id odit dolor, voluptatum voluptates vero veritatis tempora
-                    nesciunt dolore iusto magnam sapiente deleniti quas vel
-                    nostrum assumenda quidem quae ipsam cupiditate.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Id odit dolor, voluptatum voluptates vero veritatis tempora
-                    nesciunt dolore iusto magnam sapiente deleniti quas vel
-                    nostrum assumenda quidem quae ipsam cupiditate.
-                  </p>
+                <div class="text-container d-flex flex-column justify-content-center">
+                  <span>
+                    Telefone: (65) 3000-0000
+                  </span>
+                  <span>
+                    WhatsApp: (65) 90000-0000
+                  </span>
                 </div>
                 <div class="blank-space"></div>
                 <span class="line"></span>
@@ -259,11 +231,13 @@
                 </div>
               </div>
               
-              <div class="col-10 col-md-10 col-lg-5">
-                <img src="assets/about-image.jpg" class="img-fluid" />
+              <div class="col-10 col-md-10 col-lg-5 d-flex flex-column border justify-content-center">
+                <div id="myMap" class="map"></div>
               </div>
             </article>
             <!--CONTACT US-->
+
+            
 
             <!-- FOOTER -->
             <footer class="row d-flex position-relative mx-0 bg-light-gray py-2">
@@ -282,7 +256,7 @@
                 <a href="https://www.facebook.com/" class="nav-link hover-orange px-1">
                   <i class="fab fa-whatsapp fa-lg"></i>
                 </a>
-                <span class="tw-bold mx-1">(65)9000000</span>
+                <span class="tw-bold mx-1">(65) 9000000</span>
               </div>
             </footer>
             <!-- FOOTER -->
@@ -299,6 +273,10 @@
 
     </footer>
 
+    <!-- JS File -->
+    <script type="text/javascript" src="js/js.js"></script>
+    <!-- Bing Maps -->
+    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
