--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <!--ABOUT US-->
 
             <!--GALLERY-->
-            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="gallery">
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 pt-md-5" id="gallery">
               <div class="col-11">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-indicators">
@@ -196,7 +196,7 @@
             </article>
             <!--GALLERY-->
 
-            <!--CONTACT US-->
+            <!-- INFOS -->
             <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="infos">
               <div class="col-11 col-lg-6 p-4 d-flex flex-column">
                 <h1 class="text-uppercase mt-2 mt-md-0">Informações</h1>
@@ -213,7 +213,7 @@
                 <div class="blank-space"></div>
                 <span class="line"></span>
                 <div class="blank-space"></div>
-                <h5 class="mt-3">Contato</h5>
+                <h5 class="mt-2">Contato</h5>
                 <div class="text-container d-flex flex-column justify-content-center">
                   <span>
                     Telefone: (65) 3000-0000
@@ -231,11 +231,11 @@
                 </div>
               </div>
               
-              <div class="col-10 col-md-10 col-lg-5 d-flex flex-column border justify-content-center">
+              <div class="col-0 col-md-10 col-lg-5 d-flex flex-column justify-content-center px-1 px-md-2">
                 <div id="myMap" class="map"></div>
               </div>
             </article>
-            <!--CONTACT US-->
+            <!-- INFOS -->
 
             
 
