--- a/index.html
+++ b/index.html
@@ -64,68 +64,68 @@
 
             <!-- MENU -->
             <article class="row d-flex d-md-flex-column position-relative mx-0" id="menu">
-              <div class="col-0 p-5 opacity0" id="menu-content">
+              <div class="col-0 p-5 opacity0" id="menu-content" name="menu-item">
                 <h1>MENU</h1>
                 <div class="container-fluid px-1 px-md-2">
                   <h5 class="mt-4">BURGERS</h5>
                   <span class="line"></span>
                   <div class="row row-menu flex-row">
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Barbecue</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Duplo</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Jalapeño</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Quatro queijos</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Costela suína</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Picanha</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Barbecue</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Duplo</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Jalapeño</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Quatro queijos</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Costela suína</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
   
-                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3">
+                    <div class="col-md-6 col-lg-4 col-sm-10 m-0 py-1 px-3 opacity0" name="menu-item">
                       <h6 class="text-uppercase">Picanha</h6>
                       <p class="fst-italic">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque eveniet fugiat molestias, sit numquam pariatur</p>
                     </div>
@@ -196,10 +196,9 @@
             <!--GALLERY-->
 
             <!-- INFOS -->
-            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="infos">
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-2 my-md-5" id="infos">
               <div class="col-11 col-lg-6 p-4 d-flex flex-column">
                 <h1 class="text-uppercase mt-2 mt-md-0">Informações</h1>
-                <div class="blank-space"></div>
                 <h5 class="mt-3">Localização</h5>
                 <div class="text-container d-flex flex-column justify-content-center">
                   <span class="col-0">
@@ -209,9 +208,7 @@
                     Voluptates, Cuiabá-MT
                   </span>
                 </div>
-                <div class="blank-space"></div>
                 <span class="line"></span>
-                <div class="blank-space"></div>
                 <h5 class="mt-2">Contato</h5>
                 <div class="text-container d-flex flex-column justify-content-center">
                   <span>
@@ -221,12 +218,10 @@
                     WhatsApp: (65) 90000-0000
                   </span>
                 </div>
-                <div class="blank-space"></div>
                 <span class="line"></span>
-                <div class="blank-space"></div>
-                <h5 class="mt-3">Horário de Funcionamento</h5>
-                <div class="text-container d-flex ">
-                  <span class="col-0">Segunda a Sábado: 15:00h - 23:00h</span>
+                <h5 class="mt-2">Horário de Funcionamento</h5>
+                <div class="text-container d-flex">
+                  <span class="col-0 mb-3 mb-md-1">Segunda a Sábado: 15:00h - 23:00h</span>
                 </div>
               </div>
               
