--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <div class="col-10 col-md-10 col-lg-5">
                 <img src="assets/about-image.jpg" class="img-fluid" />
               </div>
-              <div class="col-11 col-lg-6 p-4 d-flex flex-column text-center">
+              <div class="col-11 col-lg-6 p-4 d-flex flex-column text-center border border-primary">
                 <h1 class="text-uppercase mt-2 mt-md-0 text-center">Sobre</h1>
                 <div class="text-container d-flex justify-content-center">
                   <p class="col-md-11 text-center">
@@ -154,6 +154,29 @@
                     nostrum assumenda quidem quae ipsam cupiditate.
                   </p>
                 </div>
+
+                <div class="container">
+                  <div class="row border border-primary align-items-center">
+                    <div class="col-4 burger" id="b5">
+                      <img class="img-fluid" src="assets/burger/b5.png" name="ingd" />
+                    </div>
+                    <div class="col-4 burger">
+                    </div>
+                    <div class="col-4 burger" id="b5">
+                      <img class="img-fluid" src="assets/burger/b4.png" name="ingd" />
+                    </div>
+                  </div>
+                  <div class="row border border-primary align-items-center">
+                    <div class="col-4 burger">
+                      <img class="img-fluid" src="assets/burger/b1.png" name="ingd" />
+                    </div>
+                    <div class="col-4 burger">
+                      <img class="img-fluid" src="assets/burger/bot.png" name="ingd" />
+                    </div>
+                    <div class="col-4 burger">
+                      <img class="img-fluid" src="assets/burger/b6.png" name="ingd" />
+                    </div>
+                  </div>
               </div>
             </article>
             <!--ABOUT US-->
