Burger animation removed

--- a/index.html
+++ b/index.html
@@ -136,15 +136,21 @@
             <!-- MENU -->
             
             <!--ABOUT US-->
-            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 my-5" id="about">
+            <article class="row d-flex d-md-flex-column position-relative justify-content-center mx-0 py-5" id="about">
               <div class="col-10 col-md-10 col-lg-5">
                 <img src="assets/about-image.jpg" class="img-fluid" />
               </div>
               <div class="col-11 col-lg-6 p-4 d-flex flex-column text-center h-75">
-                <div class="row">
+                <div class="col-0 col-md-10 d-flex flex-column align-self-center">
                   <h1 class="text-uppercase mt-2 mt-md-0 text-center">Sobre</h1>
-                  <div class="text-container d-flex justify-content-center">
-                    <p class="col-md-11 mx-5 text-center">
+                  <p class="text-center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Id odit dolor, voluptatum voluptates vero veritatis tempora
+                    nesciunt dolore iusto magnam sapiente deleniti quas vel
+                    nostrum assumenda quidem quae ipsam cupiditate.
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                  </p>
+                    <p class="text-center">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                       Id odit dolor, voluptatum voluptates vero veritatis tempora
                       nesciunt dolore iusto magnam sapiente deleniti quas vel
@@ -152,36 +158,10 @@
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                       Id odit dolor, voluptatum voluptates vero veritatis tempora
                       nesciunt dolore iusto magnam sapiente deleniti quas vel
-                      nostrum assumenda quidem quae ipsam cupiditate.
+                      nostrum assumenda.
                     </p>
                   </div>
                 </div>
-                <div class="row mt-5" id="burger">
-                  <div class="container px-0" id="burger-container">
-                    <div class="row align-items-center">
-                      <div class="col-4 burger" id="b4">
-                        <img class="img-fluid" src="assets/burger/b5.png" />
-                      </div>
-                      <div class="col-4 burger">
-                      </div>
-                      <div class="col-4 burger" id="b5">
-                        <img class="img-fluid" src="assets/burger/b4.png" />
-                      </div>
-                    </div>
-                    <div class="row align-items-center">
-                      <div class="col-4 burger" id="b2">
-                        <img class="img-fluid" src="assets/burger/b1.png" />
-                      </div>
-                      <div class="col-4 burger">
-                        <img class="img-fluid" src="assets/burger/bot.png" />
-                      </div>
-                      <div class="col-4 burger" id="b3">
-                        <img class="img-fluid" src="assets/burger/b6.png" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
             </article>
             <!--ABOUT US-->
